--- a/credentials.yml
+++ b/credentials.yml
@@ -12,9 +12,13 @@ rest:
 #  secret: "<your secret>"
 #  page-access-token: "<your page access token>"
 
-#slack:
-#  slack_token: "<your slack token>"
-#  slack_channel: "<the slack channel>"
+slack:
+  slack_token: "xoxb-780204474881-999812475396-iQSsgrdipwTTD4ugO7ndR1t7"
+  slack_channel: "#test"
+  slack_retry_reason_header: "x-slack-retry-reason"  # Slack HTTP header name indicating reason that slack send retry request. This configuration is optional.
+  slack_retry_number_header: "x-slack-retry-num"  # Slack HTTP header name indicating the attempt number. This configuration is optional.
+  errors_ignore_retry: None  # Any error codes given by Slack included in this list will be ignored. Error codes are listed `here <https://api.slack.com/events-api#errors>`_.
+
 
 #socketio:
 #  user_message_evt: <event name for user message>
